# AtlantisEngine

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md  box2d.cmake  header_parser.py  lua-lib.cmake  luajit-lib.cmake  set_active_project.py
AtlantisGame/: CMakeLists.txt
AtlantisGame/src/: entry.cpp  game.h
projects/AtlantisBunnyMark/: CMakeLists.txt
projects/AtlantisBunnyMark/lua/: main.lua
projects/AtlantisBunnyMark/src/: entry.cpp  game.h
projects/AtlantisBunnyMarkLua/: CMakeLists.txt
projects/AtlantisBunnyMarkLua/lua/: main.lua
projects/AtlantisBunnyMarkLua/src/: entry.cpp  game.h
projects/AtlantisGame/: CMakeLists.txt
projects/AtlantisGame/src/: entry.cpp
src/: helpers.cpp  helpers.h  main.cpp  rayWrapper.h  timer.cpp  timer.h
src/engine/: baseTypeSerialization.h  core.cpp  core.h  inputHandler.cpp  inputHandler.h  profiling.cpp  profiling.h  system.cpp  system.h  taskScheduler.h  world.cpp  world.h
src/engine/physics/: grid.cpp  grid.h  physicsSystem.cpp  physicsSystem.h
src/engine/reflection/: reflectionHelpers.cpp  reflectionHelpers.h
src/engine/renderer/: renderer.cpp  renderer.h
src/engine/scripting/: luaRuntime.h
src/engine/ui/: uiElements.h  uiSystem.cpp  uiSystem.h
